--- a/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/textlist/textlist.html
@@ -10,7 +10,7 @@
         {% if component.model.modules.name.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">姓名</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="name" data-control-type="appkit.shortcuts">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="name" data-control-type="appkit.textlist">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -24,7 +24,7 @@
         {% if component.model.modules.phone.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">手机</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.shortcuts">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="phone" data-control-type="appkit.textlist">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -38,7 +38,7 @@
         {% if component.model.modules.email.select %}
         <li class="wui-i-item">
             <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">邮箱</label>
-            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="email" data-control-type="appkit.shortcuts">
+            <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="email" data-control-type="appkit.textlist">
                 <input
                     class="wui-i-input"
                     type="text"
@@ -52,7 +52,7 @@
         {% if component.model.modules.qq.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">QQ</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="qq" data-control-type="appkit.shortcuts">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="qq" data-control-type="appkit.textlist">
                     <input
                         class="wui-i-input"
                         type="text"
@@ -66,7 +66,7 @@
         {% if component.model.modules.job.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">职位</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="job" data-control-type="appkit.shortcuts">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="job" data-control-type="appkit.textlist">
                     <input
                         class="wui-i-input"
                         type="text"
@@ -80,7 +80,7 @@
         {% if component.model.modules.addr.select %}
             <li class="wui-i-item">
                 <label class="wui-i-label {% if component.model.is_mandatory == 'true' %}xui-mandatory{% endif %}">地址</label>
-                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="addr" data-control-type="appkit.shortcuts">
+                <div class="wui-i-inputContainer xa-inputControl" data-input-type="text" data-input-name="addr" data-control-type="appkit.textlist">
                     <input
                         class="wui-i-input"
                         type="text"
