查看图片css自由高度

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -17,10 +17,10 @@
         background-color: #DDDDDD;
         border: 2px solid #DDDDDD;
         width: 500px;
-        height: 500px;
+        height: auto;
         overflow: auto;
         margin: auto;
-        top: 50%; left: 0; bottom: 0; right: 0;
+        top: 50%; left: 0;right: 0;
         text-align: center;
     }
     .xa-uploadimg_box .xa-close_btn{
@@ -30,10 +30,11 @@
     }
     .xa-uploadimg_box .xa-uploadimg{
         max-width: 100%;
-        max-height: 100%;
+{#        max-height: 100%;#}
         overflow: auto;
         margin: auto;
-        top: 50%; left: 0; bottom: 0; right: 0;
+        top: auto; left: auto; bottom: auto; right: auto;
+        vertical-align: middle;
     }
     </style>
 {% endblock %}
