显示用户名表情字符

--- a/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
+++ b/weapp/apps/customerized_apps/event/templates/editor/event_participances.html
@@ -117,7 +117,7 @@
 					style="width:250px; height:60px;" 
 				>
 					<img src="${item.participant_icon}" />
-					${item.participant_name}
+					{{html item.participant_name}}
 				</td>
 				<td>
 					${item.created_at}
