--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -14,8 +14,6 @@
     .xa-uploadimg_box{
         display: none;
         position: absolute;
-        background-color: #DDDDDD;
-        border: 2px solid #DDDDDD;
         width: 500px;
         height: auto;
         overflow: auto;
@@ -29,12 +27,14 @@
         z-index: 1000000;
     }
     .xa-uploadimg_box .xa-uploadimg{
+        background-color: #DDDDDD;
+        border: 2px solid #DDDDDD;
         max-width: 100%;
 {#        max-height: 100%;#}
-        overflow: auto;
-        margin: auto;
-        top: auto; left: auto; bottom: auto; right: auto;
-        vertical-align: middle;
+{#        overflow: auto;#}
+{#        margin: auto;#}
+{#        top: auto; left: auto; bottom: auto; right: auto;#}
+{#        vertical-align: middle;#}
     }
 
     .xa-arr{
