--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -23,7 +23,7 @@
     }
     .xa-uploadimg_box .xa-close_btn{
         position: absolute;
-        top: 0; right: 0;
+        top: 5px; right: 5px;
         z-index: 1000000;
     }
     .xa-uploadimg_box .xa-uploadimg{
