--- a/weapp/mall/templates/mall/editor/outline.html
+++ b/weapp/mall/templates/mall/editor/outline.html
@@ -37,7 +37,7 @@
 						{% endfor %}
 					</div>
 					<footer class="xui-i-moreOrder">
-					<a href='/mall2/order_list/'>更多...</a>
+					<a href='/mall2/order_list/?order_status=3'>更多...</a>
 					</footer>
 				</section>
 
