--- a/weapp/templates/webapp_content_base_v4.html
+++ b/weapp/templates/webapp_content_base_v4.html
@@ -112,7 +112,7 @@
             </div>
             {% endfor %}
         </div>
-        {% include "global_navbar.html" %}
+        {% include "weapp_jssdk_base.html.html" %}
 
 
         <!-- 公告超出滚动 -->
