统计，修改保留

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -21,6 +21,7 @@
         top: 25%; left: 0;right: 0;
         text-align: center;
         background-color: #DDDDDD;
+        z-index: 1000000;
     }
     .xa-uploadimg_box .xa-close_btn{
         position: absolute;
