统计点击图片demo

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
@@ -224,6 +224,8 @@
             }
         });
     });
+
+    //click_img
     var click_count = 1;
     $('body').delegate('.xa-uploadimg', 'click', function(event) {
         if(click_count ===1) {
