--- a/weapp/templates/jqm_content_base.html
+++ b/weapp/templates/jqm_content_base.html
@@ -117,7 +117,7 @@
             </div>
             {% endif %}
         {% endif %}
-        {% include "weapp_jssdk_base.html.html" %}
+        {% include "weapp_jssdk_base.html" %}
         <script type="text/javascript">
             W.visitHistory = "{{ visit_histroy_url }}";
             W.urlTitle = "{{ visit_histroy_url_title }}";
