--- a/weapp/templates/new_jqm_content_base.html
+++ b/weapp/templates/new_jqm_content_base.html
@@ -155,7 +155,7 @@
             {% endwith %}
             {% endif %}
         {% endif %}
-        {% include "weapp_jssdk_base.html.html" %}
+        {% include "weapp_jssdk_base.html" %}
         <div id="jsons" style="display: none;">
             {% for json in jsons %}
             <div id="__json-{{json.name}}">
