--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -124,7 +124,7 @@
         {% if global_navbar %}
         {% include "global_navbar.html" %}
         {% endif %}
-        {% include "weapp_jssdk_base.html.html" %}
+        {% include "weapp_jssdk_base.html" %}
 
         <div id="jsons" style="display: none;">
             {% for json in jsons %}
