mod 总参与人数

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
@@ -121,7 +121,7 @@
 	
     <div class="panel panel-default xui-tableBox">
         <div class="panel-header clearfix">
-            <b class="xui-i-totalcount fr">总参与人数: {{ total_count }} 人</b>
+            <b class="xui-i-totalcount fr">总参与人数: {{ total_participance }} 人</b>
             <a class="btn btn-default xui-fontBold fr xui-i-exportBtn xa-i-exportBtn" href="javascript:void(0);">批量导出</a>
             <a id="export_href" style="display: none ">DownloadXLS</a>
         </div>
