--- a/weapp/apps/customerized_apps/vote/templates/editor/vote_statistic.html
+++ b/weapp/apps/customerized_apps/vote/templates/editor/vote_statistic.html
@@ -55,6 +55,7 @@
             <a class="btn btn-default xui-fontBold fr xui-i-exportBtn xa-i-exportBtn" href="javascript:void(0);">批量导出</a>
             <a id="export_href" style="display: none ">DownloadXLS</a>
         </div>
+        {% if titles %}
         {% for title in titles %}
             <div class="xui-i-tableHeader">
                 <span>{{ forloop.counter }}、{{ title.title_name }}（{{ title.type }}）</span>
@@ -88,8 +89,13 @@
                 {% endfor %}
                 </tbody>
             </table>
-
         {% endfor %}
+        {% else %}
+            <div class="xui-emptyBox m10">
+                <img src="/static_v2/img/editor/empty.png">
+                <span class="ml20">该投票没有投票项！</span>
+            </div>
+        {% endif %}
     </div>
 
 </div>
