查看大图Chrome兼容

--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_participances.html
@@ -22,6 +22,7 @@
         text-align: center;
         background-color: #DDDDDD;
         z-index: 1000000;
+        overflow-y: hidden;
     }
     .xa-uploadimg_box .xa-close_btn{
         position: absolute;
@@ -32,7 +33,6 @@
         max-width: 100%;
         border: 2px solid #DDDDDD;
     }
-
     .xa-arr{
         position: absolute;
         top:40%;
