--- a/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
+++ b/weapp/apps/customerized_apps/survey/templates/editor/survey_statistics.html
@@ -121,9 +121,10 @@
     <div class="panel panel-default xui-tableBox">
         <div class="panel-header clearfix">
             <b class="xui-i-totalcount fr">总参与人数: {{ total_participance }} 人</b>
-            <a class="btn btn-default xui-fontBold fr xui-i-exportBtn xa-i-exportBtn" href="javascript:void(0);">批量导出</a>
+            {% if titles %}<a class="btn btn-default xui-fontBold fr xui-i-exportBtn xa-i-exportBtn" href="javascript:void(0);">批量导出</a>{% endif %}
             <a id="export_href" style="display: none ">DownloadXLS</a>
         </div>
+        {% if titles %}
         {% for title in titles %}
             <div class="xui-i-tableHeader">
                 <span>{{ forloop.counter }}、{{ title.title }}（{{ title.title_type }}）</span>
@@ -168,6 +169,12 @@
                 </div>
             {% endifequal %}
         {% endfor %}
+        {% else %}
+            <div class="xui-emptyBox m10">
+                <img src="/static_v2/img/editor/empty.png">
+                <span class="ml20">该调研活动没有填写项！</span>
+            </div>
+        {% endif %}
     </div>
 
 </div>
