--- a/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
+++ b/weapp/weixin2/templates/weixin/message/mass_sent_messages.html
@@ -13,7 +13,7 @@
     </ul>
     <ul class="xui-messageNav">
         <li class="messageNavLi">
-            <a class="messageNavLiA" href="/new_weixin/mass_sending_messages/">新建群发消息</a>
+            <a class="messageNavLiA" href="/new_weixin/mass_sending_messages/">新建ddd群发消息</a>
         </li>
         <li class="active messageNavLi">
             <a class="messageNavLiA" href="javascript:void(0);">已发送</a>
