--- a/weapp/static_v2/css/mass_message.css
+++ b/weapp/static_v2/css/mass_message.css
@@ -174,8 +174,16 @@
 .xui-massSentPage .wui-newses .wui-i-title{
 	margin-left: 0px;
 	line-height: 25px;
-	width: 90%;
+	width: 80%;
 }
+.xui-massSentPage .wui-newses {
+	width: 600px;
+}
+.xui-massSentPage .wui-newses a{
+	white-space: normal;
+}
+ 
+
 
 .xui-massSentPage .xui-messageNav{
 	border-bottom: 1px solid #ccc;
