--- a/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/uploadimg/uploadimg.html
@@ -10,7 +10,7 @@
 	<h1 class="wui-i-title">{{component.model.title}} {% if component.model.is_mandatory == "true" %}<span class="wui-i-mandatory">(必填)</span>{% endif %}</h1>
 	<div class="wui-i-uploadimg xa-inputControl" data-input-type="imgarea" data-input-name="{{component.model.title}}" data-control-type="appkit.uploadimg">
 		<div class="xui-productPhoto mt10">
-			<div class="xui-addPhoto mb10 fl pr"
+			<div class="xui-addPhoto fl pr"
 				{% if component.model.is_mandatory == "true" %}
 		 		data-validate='require-upload-img::请上传"{{component.model.title}}"'
 		 		{% endif %}
