--- a/weapp/member/templates/member/editor/member_tags.html
+++ b/weapp/member/templates/member/editor/member_tags.html
@@ -28,6 +28,7 @@
 					<tbody class='tags_tbody'>
 						{% for member_tag in member_tags %}
 							{% if member_tag.name == '未分组' %}
+							<input type="hidden"   id="tag_id_{{member_tag.id}}" name="tag_id_{{member_tag.id}}" />
 								<tr data-id="{{ member_tag.id }}" class="domain_data">
 									<td>
 										<span>{{ member_tag.name }}</span>
@@ -75,7 +76,7 @@
 					</tbody>
 				</table>
 				<div class="xui-btn-group tc">
-					<input type="submit" class="btn btn-primary" id="submitBtn" value="保&nbsp;&nbsp;&nbsp;&nbsp;存" />
+					<input type="button" class="btn btn-primary" id="submitBtn" value="保&nbsp;&nbsp;&nbsp;&nbsp;存" />
 				</div>
 			</form>
 		</div>
@@ -138,12 +139,38 @@
 				}
 			});
 		});
-
-		$('#editForm').submit(function() {
+		var ids = '{{ids}}';
+		$('#submitBtn').click(function(event){
 			if (!W.validate()) {
 				return false;
 			}
-			W.showHint('success', '保存成功');
+			var $form = $('form');
+			var data = $form.serializeObject();
+			data['ids'] = ids;
+			W.getApi().call({
+				method: 'post',
+				app: 'member',
+				api: 'tags/update',
+				args: data,
+				success: function(data) {
+					W.showHint('success', '保存成功');
+					window.location.reload();
+                },
+                error: function(resp) {
+                	console.log(resp)
+                	if (resp['code'] == '201'){
+                		W.showHint('error', '保存失败，分组已经被删除，请稍后重试！');
+                	} else {
+                		W.showHint('error', '保存失败，请稍后重试！');
+                	}
+                	setTimeout(function() {
+   							window.location.reload();
+   						}, 3000);
+	              	
+                },
+                scope: this
+			});
+			
 			/*var $tagName = $('input.xa-tag-name');
 			var flag = true;
 			$tagName.each(function(i, value) {
